# HATA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt  test_index_attn.py  test_mixed_attn_complex.py  test_mixed_attn_simple.py  test_mixed_attn_simple_all_buffer.py  test_mixed_attn_simple_all_cached.py
bench/: bench_hf_generate_speed.py
configs/: hash_llama3.1_longbench-e.ini  hash_qwen2.5_longbench-e.ini
python/: setup.py
python/myTransformer/: __init__.py
scripts/: run_compile.sh  run_compile_multi_hash.sh
speedup/: ablation_sys_impl_naive.py  ablation_sys_impl_optim1.py  ablation_sys_impl_optim2.py  ablation_sys_impl_optim3.py
src/: add.cu  combine_attention.cu  combine_attention_dim128.c  combine_attention_dim128.h  cuda_utils.cuh  decode_hash_encode.cu  decode_hash_encode_rbit128_dim128.c  decode_hash_encode_rbit128_dim128.h  decode_hash_encode_rbit256_dim128.c  decode_hash_encode_rbit256_dim128.h  decode_multi_hash_encode.cu  decode_multi_hash_encode_rbit128_dim128.c  decode_multi_hash_encode_rbit128_dim128.h  decode_multi_hash_encode_rbit256_dim128.c  decode_multi_hash_encode_rbit256_dim128.h  encode.cu  ham_dist.cu  kvcache_append.cu  operator.h  pybind.cc  topk.cu
src/attn/: flash_api.h  flash_fwd_hdim128_fp16_sm80.cu  flash_fwd_kernel.h  flash_fwd_launch_template.h  (+2 more)
tasks/: dataloader.py  dataset_utils.py  eval_arc.py  eval_longbench_infinitebench.py  eval_longbench_v2.py  eval_math.py  eval_niah.py  eval_ruler.py  gen_niah_data.py  llama_utils.py  model_utils.py  run.sh  run_eval.py  run_full.sh  run_full_ruler.sh  run_hash.sh  run_hash_longbench.sh  run_hash_niah.sh  run_hash_ruler.sh  run_infinigen.sh  run_infinigen_longbench.sh  run_loki.sh  run_longbench.sh  run_niah.sh  run_pred.py  run_sparq.sh  run_topk.sh  train_hash_weights.py  train_hash_weights_glm.py  utils.py
test/: bench_hf_generate_speed.py  bench_hf_generate_speed_loki.py  bench_hf_generate_speed_sparq.py  bench_one_layer.py  bench_one_layer_hash.py  bench_one_layer_hash_glm.py  bench_one_layer_loki.py  bench_one_layer_loki_glm.py  bench_one_layer_multi_hash.py  bench_one_layer_multi_hash_glm.py  bench_one_layer_sparq.py  bench_one_layer_sparq_glm.py  test_add.py  test_attn_combine.py  test_cpu_attention.py  test_cpu_sparse_attention.py  test_cpu_sparse_attention_with_meta.py  test_cuda_encode.py  test_cuda_fa_gather.py  test_cuda_fa_gather_gqa_kheadwise.py  test_cuda_fa_gather_gqa_qheadwise.py  test_cuda_fa_gather_mha.py  test_cuda_topk.py  test_flashinfer_mlp.py  test_flashinfer_rope_default.py  test_flashinfer_rope_linear.py  test_flashinfer_rope_llama.py  test_hamming.py  test_hash_decode_encode_norm.py  test_hash_encode.py  test_hash_prefill_encode_norm.py  test_hf_generate.py  test_hf_generate_hash.py  test_hf_generate_infinigen.py  test_hf_generate_loki.py  test_hf_generate_multi_hash.py  test_hf_generate_sparq.py  test_hf_generate_topk.py  test_hf_train_hash.py  test_kvcache_append_kernel.py  (+7 more)
weights/: build_dataset.py  learn_hash_weights.py  run_build_dataset.sh  run_training.sh
(+400 files in other folders)
